Named functions and aggs for human feedback

--- a/FeedbackExample.ipynb
+++ b/FeedbackExample.ipynb
@@ -20,12 +20,159 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "967f6beacd4e4a6b869fa5c1dd6f718f",
+       "model_id": "c2cdc6a7ecee489aa841168d547f5d3d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "GridBox(children=(Label(value='prompt_template'), Label(value='user_input'), Label(value='response(s)'), Label…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt_template</th>\n",
+       "      <th>feedback_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Answer the following question: {{input}}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Anwer the following question: {{input}}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            prompt_template  feedback_score\n",
+       "0  Answer the following question: {{input}}  1             \n",
+       "1  Anwer the following question: {{input}}   1             "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt_template</th>\n",
+       "      <th>feedback_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Anwer the following question: {{input}}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Answer the following question: {{input}}</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            prompt_template  feedback_score\n",
+       "0  Anwer the following question: {{input}}   1             \n",
+       "1  Answer the following question: {{input}}  0             "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt_template</th>\n",
+       "      <th>feedback_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Answer the following question: {{input}}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Anwer the following question: {{input}}</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            prompt_template  feedback_score\n",
+       "0  Answer the following question: {{input}}  1             \n",
+       "1  Anwer the following question: {{input}}   0             "
       ]
      },
      "metadata": {},
@@ -62,8 +209,8 @@
     "# Run the evaluation\n",
     "harness.prepare()\n",
     "harness.run()\n",
-    "harness.evaluate(eval_fn)\n",
-    "harness.visualize(feedback=True)"
+    "harness.evaluate(\"names_dodgers\", eval_fn)\n",
+    "harness.gather_feedback()"
    ]
   },
   {
@@ -73,17 +220,71 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "👍\n",
-      "👎\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>messages</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>names_dodgers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Answer the following question: Who won the world series in 2020?</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Anwer the following question: Who won the world series in 2020?</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                           messages   \n",
+       "0  Answer the following question: Who won the world series in 2020?  \\\n",
+       "1  Anwer the following question: Who won the world series in 2020?    \n",
+       "\n",
+       "                                                  response(s)   latency   \n",
+       "0  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000003  \\\n",
+       "1  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000001   \n",
+       "\n",
+       "   names_dodgers  \n",
+       "0  1.0            \n",
+       "1  1.0            "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print(\"\\U0001F44D\")\n",
-    "print(\"\\U0001F44E\")"
+    "harness.visualize()"
    ]
   },
   {
