--- a/FeedbackExample.ipynb
+++ b/FeedbackExample.ipynb
@@ -188,15 +188,20 @@
     "    PromptTemplateExperimentationHarness,\n",
     ")\n",
     "\n",
+    "\n",
+    "def extract_responses(output) -> str:\n",
+    "    return [choice[\"message\"][\"content\"] for choice in output[\"choices\"]]\n",
+    "\n",
     "# Define a list of chat histories over which to run your experiment\n",
     "prompt_templates = [\"Answer the following question: {{input}}\", \"Anwer the following question: {{input}}\"]\n",
     "user_inputs = [{\"input\": \"Who won the world series in 2020?\"}]\n",
     "\n",
     "\n",
     "# Define an evaluation function that assigns scores to each inference\n",
-    "def eval_fn(messages: List[Dict[str, str]], results: List[str]) -> float:\n",
-    "    for result in results:\n",
-    "        if \"Dodgers\" in result:\n",
+    "def eval_fn(messages: List[Dict[str, str]], results: Dict) -> float:\n",
+    "    responses = extract_responses(results)\n",
+    "    for response in responses:\n",
+    "        if \"Dodgers\" in response:\n",
     "            return 1.0\n",
     "    return 0.0\n",
     "\n",
