Add ranking and unit test decorator

--- a/FeedbackExample.ipynb
+++ b/FeedbackExample.ipynb
@@ -198,7 +198,7 @@
     "\n",
     "\n",
     "# Define an evaluation function that assigns scores to each inference\n",
-    "def eval_fn(messages: List[Dict[str, str]], results: Dict) -> float:\n",
+    "def eval_fn(messages: List[Dict[str, str]], results: Dict, metadata: Dict) -> float:\n",
     "    responses = extract_responses(results)\n",
     "    for response in responses:\n",
     "        if \"Dodgers\" in response:\n",
