--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a7dea195",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6a80e19b",
    "metadata": {},
@@ -17,6 +19,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "28f1521a",
    "metadata": {},
@@ -38,6 +41,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "497ac0bb",
    "metadata": {},
@@ -62,6 +66,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ffcfbb5b",
    "metadata": {},
@@ -70,6 +75,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f517570f",
    "metadata": {},
@@ -89,6 +95,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c9a1777",
    "metadata": {},
@@ -107,6 +114,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "af04bd60",
    "metadata": {},
@@ -200,6 +208,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "637a7391",
    "metadata": {},
@@ -281,6 +290,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "89cd320e",
    "metadata": {},
@@ -289,6 +299,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c36767bd",
    "metadata": {},
@@ -308,12 +319,13 @@
     "def extract_responses(output) -> str:\n",
     "    return [choice[\"text\"] for choice in output[\"choices\"]]\n",
     "\n",
-    "def check_similarity(input_pair: Tuple[str,Dict[str,str]], results: Dict, metadata: Dict) -> float:\n",
+    "def check_similarity(prompt: str, results: Dict, metadata: Dict) -> float:\n",
     "    # TODO: Pass back to OpenAI API\n",
     "    pass"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3008b09e",
    "metadata": {},
