Add auto-eval example

--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a7dea195",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6a80e19b",
    "metadata": {},
@@ -19,7 +17,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "28f1521a",
    "metadata": {},
@@ -35,13 +32,11 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG']=\"1\"\n",
     "os.environ['HEGELAI_API_KEY'] = \"\"\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "497ac0bb",
    "metadata": {},
@@ -56,17 +51,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, List\n",
-    "from prompttools.experiment.openai_completion_experiment import (\n",
-    "    OpenAICompletionExperiment,\n",
-    ")\n",
+    "from typing import Dict\n",
     "from prompttools.harness.prompt_template_harness import (\n",
     "    PromptTemplateExperimentationHarness,\n",
     ")"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ffcfbb5b",
    "metadata": {},
@@ -75,7 +66,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f517570f",
    "metadata": {},
@@ -95,7 +85,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0c9a1777",
    "metadata": {},
@@ -110,11 +99,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "harness = PromptTemplateExperimentationHarness(\"gpt-3.5-turbo\", prompt_templates, user_inputs)"
+    "harness = PromptTemplateExperimentationHarness(\"text-davinci-003\", prompt_templates, user_inputs)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "af04bd60",
    "metadata": {},
@@ -158,43 +146,43 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Echo the following input: This is a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000004</td>\n",
+       "      <td>[\\n\\nThis is a test]</td>\n",
+       "      <td>2.608490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Echo the following input: This is not a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>[\\n\\nThis is not a test]</td>\n",
+       "      <td>2.105207</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Repeat the following input: This is a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>[\\n\\nThis is a test]</td>\n",
+       "      <td>0.510293</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Repeat the following input: This is not a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>[\\n\\nThis is not a test]</td>\n",
+       "      <td>1.843766</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         messages   \n",
-       "0  Echo the following input: This is a test        \\\n",
-       "1  Echo the following input: This is not a test     \n",
-       "2  Repeat the following input: This is a test       \n",
-       "3  Repeat the following input: This is not a test   \n",
+       "                                         messages               response(s)   \n",
+       "0  Echo the following input: This is a test        [\\n\\nThis is a test]      \\\n",
+       "1  Echo the following input: This is not a test    [\\n\\nThis is not a test]   \n",
+       "2  Repeat the following input: This is a test      [\\n\\nThis is a test]       \n",
+       "3  Repeat the following input: This is not a test  [\\n\\nThis is not a test]   \n",
        "\n",
-       "                                                  response(s)   latency  \n",
-       "0  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000004  \n",
-       "1  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002  \n",
-       "2  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002  \n",
-       "3  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002  "
+       "    latency  \n",
+       "0  2.608490  \n",
+       "1  2.105207  \n",
+       "2  0.510293  \n",
+       "3  1.843766  "
       ]
      },
      "metadata": {},
@@ -208,7 +196,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "637a7391",
    "metadata": {},
@@ -257,28 +244,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>{'input': 'This is a test'}</th>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>[\\n\\nThis is a test]</td>\n",
+       "      <td>[\\n\\nThis is a test]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>{'input': 'This is not a test'}</th>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>[\\n\\nThis is not a test]</td>\n",
+       "      <td>[\\n\\nThis is not a test]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "prompt_template                                         Echo the following input: {{input}}   \n",
-       "user_input                                                                                    \n",
-       "{'input': 'This is a test'}      [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  \\\n",
-       "{'input': 'This is not a test'}  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]   \n",
+       "prompt_template                 Echo the following input: {{input}}   \n",
+       "user_input                                                            \n",
+       "{'input': 'This is a test'}      [\\n\\nThis is a test]                \\\n",
+       "{'input': 'This is not a test'}  [\\n\\nThis is not a test]             \n",
        "\n",
-       "prompt_template                                       Repeat the following input: {{input}}  \n",
-       "user_input                                                                                   \n",
-       "{'input': 'This is a test'}      [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  \n",
-       "{'input': 'This is not a test'}  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  "
+       "prompt_template                 Repeat the following input: {{input}}  \n",
+       "user_input                                                             \n",
+       "{'input': 'This is a test'}      [\\n\\nThis is a test]                  \n",
+       "{'input': 'This is not a test'}  [\\n\\nThis is not a test]              "
       ]
      },
      "metadata": {},
@@ -290,16 +277,14 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "89cd320e",
    "metadata": {},
    "source": [
-    "## Evaluate the model response"
+    "## Auto-Evaluate the model response"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c36767bd",
    "metadata": {},
@@ -309,23 +294,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "8fe03c31",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, Tuple\n",
+    "import openai\n",
+    "import jinja2\n",
+    "\n",
+    "ECHO_EVALUATION_TEMPLATE=\"\"\"\n",
+    "Determine whether or not the response is following directions.\n",
+    "Your answer should either be \"RIGHT\" if the response follows directions,\n",
+    "or \"WRONG\" if the model is not following directions.\n",
+    "\n",
+    "Write your answer here:\n",
+    "PROMPT: {{prompt}}\n",
+    "RESPONSE: {{response}}\n",
+    "ANSWER: \n",
+    "\"\"\"\n",
     "\n",
     "def extract_responses(output) -> str:\n",
     "    return [choice[\"text\"] for choice in output[\"choices\"]]\n",
     "\n",
-    "def check_similarity(prompt: str, results: Dict, metadata: Dict) -> float:\n",
-    "    # TODO: Pass back to OpenAI API\n",
-    "    pass"
+    "def auto_eval(prompt: str, results: Dict, metadata: Dict) -> float:\n",
+    "    environment = jinja2.Environment()\n",
+    "    template = environment.from_string(ECHO_EVALUATION_TEMPLATE)\n",
+    "    responses = extract_responses(results)\n",
+    "    prompts = [template.render({\"prompt\": prompt, \n",
+    "                                \"response\": response}) for response in responses]\n",
+    "    evals = [openai.Completion.create(model=\"text-davinci-003\",\n",
+    "                                      prompt=prompt) for prompt in prompts]\n",
+    "    return float(sum([1 if 'RIGHT' in e['choices'][0]['text'] else 0 for e in evals]))"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3008b09e",
    "metadata": {},
@@ -335,18 +337,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4633f802",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-07-04 13:55:23,074] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
-      "[2023-07-04 13:55:23,348] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
-      "[2023-07-04 13:55:23,591] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
-      "[2023-07-04 13:55:23,823] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n"
+      "[<OpenAIObject text_completion id=cmpl-7Yl3SC4jCsVc2mJMNZmUEomK8BKZa at 0x11e656e10> JSON: {\n",
+      "  \"choices\": [\n",
+      "    {\n",
+      "      \"finish_reason\": \"stop\",\n",
+      "      \"index\": 0,\n",
+      "      \"logprobs\": null,\n",
+      "      \"text\": \" RIGHT\"\n",
+      "    }\n",
+      "  ],\n",
+      "  \"created\": 1688518386,\n",
+      "  \"id\": \"cmpl-7Yl3SC4jCsVc2mJMNZmUEomK8BKZa\",\n",
+      "  \"model\": \"text-davinci-003\",\n",
+      "  \"object\": \"text_completion\",\n",
+      "  \"usage\": {\n",
+      "    \"completion_tokens\": 1,\n",
+      "    \"prompt_tokens\": 82,\n",
+      "    \"total_tokens\": 83\n",
+      "  }\n",
+      "}]\n",
+      "[<OpenAIObject text_completion id=cmpl-7Yl3T3VGQLUlP50Pt3blH1tTCI0O3 at 0x11e6575f0> JSON: {\n",
+      "  \"choices\": [\n",
+      "    {\n",
+      "      \"finish_reason\": \"stop\",\n",
+      "      \"index\": 0,\n",
+      "      \"logprobs\": null,\n",
+      "      \"text\": \" RIGHT\"\n",
+      "    }\n",
+      "  ],\n",
+      "  \"created\": 1688518387,\n",
+      "  \"id\": \"cmpl-7Yl3T3VGQLUlP50Pt3blH1tTCI0O3\",\n",
+      "  \"model\": \"text-davinci-003\",\n",
+      "  \"object\": \"text_completion\",\n",
+      "  \"usage\": {\n",
+      "    \"completion_tokens\": 1,\n",
+      "    \"prompt_tokens\": 84,\n",
+      "    \"total_tokens\": 85\n",
+      "  }\n",
+      "}]\n",
+      "[<OpenAIObject text_completion id=cmpl-7Yl3UaVALivISZx7dqcpZrkXV0ug8 at 0x11e6575f0> JSON: {\n",
+      "  \"choices\": [\n",
+      "    {\n",
+      "      \"finish_reason\": \"stop\",\n",
+      "      \"index\": 0,\n",
+      "      \"logprobs\": null,\n",
+      "      \"text\": \" RIGHT\"\n",
+      "    }\n",
+      "  ],\n",
+      "  \"created\": 1688518388,\n",
+      "  \"id\": \"cmpl-7Yl3UaVALivISZx7dqcpZrkXV0ug8\",\n",
+      "  \"model\": \"text-davinci-003\",\n",
+      "  \"object\": \"text_completion\",\n",
+      "  \"usage\": {\n",
+      "    \"completion_tokens\": 1,\n",
+      "    \"prompt_tokens\": 82,\n",
+      "    \"total_tokens\": 83\n",
+      "  }\n",
+      "}]\n",
+      "[<OpenAIObject text_completion id=cmpl-7Yl3VNLQwzHxcKDeYZ0VQ3fb72LiM at 0x11e656930> JSON: {\n",
+      "  \"choices\": [\n",
+      "    {\n",
+      "      \"finish_reason\": \"stop\",\n",
+      "      \"index\": 0,\n",
+      "      \"logprobs\": null,\n",
+      "      \"text\": \" RIGHT\"\n",
+      "    }\n",
+      "  ],\n",
+      "  \"created\": 1688518389,\n",
+      "  \"id\": \"cmpl-7Yl3VNLQwzHxcKDeYZ0VQ3fb72LiM\",\n",
+      "  \"model\": \"text-davinci-003\",\n",
+      "  \"object\": \"text_completion\",\n",
+      "  \"usage\": {\n",
+      "    \"completion_tokens\": 1,\n",
+      "    \"prompt_tokens\": 84,\n",
+      "    \"total_tokens\": 85\n",
+      "  }\n",
+      "}]\n"
      ]
     },
     {
@@ -373,60 +447,54 @@
        "      <th>messages</th>\n",
        "      <th>response(s)</th>\n",
        "      <th>latency</th>\n",
-       "      <th>did_echo</th>\n",
+       "      <th>followed_directions</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Echo the following input: This is a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>1.893674</td>\n",
+       "      <td>[\\n\\nThis is a test]</td>\n",
+       "      <td>2.608490</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Echo the following input: This is not a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>1.872977</td>\n",
+       "      <td>[\\n\\nThis is not a test]</td>\n",
+       "      <td>2.105207</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Repeat the following input: This is a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>1.893674</td>\n",
+       "      <td>[\\n\\nThis is a test]</td>\n",
+       "      <td>0.510293</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Repeat the following input: This is not a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>1.872977</td>\n",
+       "      <td>[\\n\\nThis is not a test]</td>\n",
+       "      <td>1.843766</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         messages   \n",
-       "0  Echo the following input: This is a test        \\\n",
-       "1  Echo the following input: This is not a test     \n",
-       "2  Repeat the following input: This is a test       \n",
-       "3  Repeat the following input: This is not a test   \n",
+       "                                         messages               response(s)   \n",
+       "0  Echo the following input: This is a test        [\\n\\nThis is a test]      \\\n",
+       "1  Echo the following input: This is not a test    [\\n\\nThis is not a test]   \n",
+       "2  Repeat the following input: This is a test      [\\n\\nThis is a test]       \n",
+       "3  Repeat the following input: This is not a test  [\\n\\nThis is not a test]   \n",
        "\n",
-       "                                                  response(s)   latency   \n",
-       "0  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000004  \\\n",
-       "1  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002   \n",
-       "2  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002   \n",
-       "3  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002   \n",
-       "\n",
-       "   did_echo  \n",
-       "0  1.893674  \n",
-       "1  1.872977  \n",
-       "2  1.893674  \n",
-       "3  1.872977  "
+       "    latency  followed_directions  \n",
+       "0  2.608490  1.0                  \n",
+       "1  2.105207  1.0                  \n",
+       "2  0.510293  1.0                  \n",
+       "3  1.843766  1.0                  "
       ]
      },
      "metadata": {},
@@ -434,7 +502,7 @@
     }
    ],
    "source": [
-    "harness.evaluate(\"did_echo\", check_similarity, use_input_pairs=True)\n",
+    "harness.evaluate(\"followed_directions\", auto_eval)\n",
     "harness.visualize()"
    ]
   },
