--- a/examples/notebooks/HumanFeedback.ipynb
+++ b/examples/notebooks/HumanFeedback.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4d8e180d",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7d598292",
    "metadata": {},
@@ -17,6 +19,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d899afc2",
    "metadata": {},
@@ -38,6 +41,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "842f1e47",
    "metadata": {},
@@ -52,16 +56,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, List\n",
-    "from prompttools.experiment.openai_completion_experiment import (\n",
-    "    OpenAICompletionExperiment,\n",
-    ")\n",
     "from prompttools.harness.prompt_template_harness import (\n",
     "    PromptTemplateExperimentationHarness,\n",
     ")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "622dea9a",
    "metadata": {},
@@ -70,6 +71,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3babfe5a",
    "metadata": {},
@@ -89,6 +91,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "273e9908",
    "metadata": {},
@@ -107,6 +110,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f3fa5450",
    "metadata": {},
@@ -200,6 +204,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "be9c5ef5",
    "metadata": {},
@@ -281,6 +286,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b1abc866",
    "metadata": {},
@@ -289,6 +295,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "45a9900e",
    "metadata": {},
