--- a/examples/notebooks/SemanticSimilarity.ipynb
+++ b/examples/notebooks/SemanticSimilarity.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c02b0509",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2eac35f8",
    "metadata": {},
@@ -17,6 +19,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5edba05a",
    "metadata": {},
@@ -38,6 +41,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "df3934db",
    "metadata": {},
@@ -52,16 +56,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, List\n",
-    "from prompttools.experiment.openai_completion_experiment import (\n",
-    "    OpenAICompletionExperiment,\n",
-    ")\n",
+    "from typing import Dict, Tuple\n",
     "from prompttools.harness.prompt_template_harness import (\n",
     "    PromptTemplateExperimentationHarness,\n",
     ")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7b106a04",
    "metadata": {},
@@ -70,6 +72,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e43545ff",
    "metadata": {},
@@ -89,6 +92,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9d152fdf",
    "metadata": {},
@@ -107,6 +111,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e6f5463a",
    "metadata": {},
@@ -200,6 +205,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b35caa9a",
    "metadata": {},
@@ -281,6 +287,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "266c13eb",
    "metadata": {},
@@ -289,6 +296,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bebb8023",
    "metadata": {},
@@ -314,9 +322,7 @@
     }
    ],
    "source": [
-    "from typing import Dict, Tuple\n",
     "import chromadb\n",
-    "chroma_client = chromadb.Client()\n",
     "\n",
     "\n",
     "def extract_responses(output) -> str:\n",
@@ -325,6 +331,7 @@
     "\n",
     "# Define an evaluation function that assigns scores to each inference\n",
     "def check_similarity(input_pair: Tuple[str,Dict[str,str]], results: Dict, metadata: Dict) -> float:\n",
+    "    chroma_client = chromadb.Client()\n",
     "    collection = chroma_client.create_collection(name=\"test_collection\")\n",
     "    collection.add(\n",
     "        documents=[dict(input_pair[1])['input']],\n",
@@ -340,6 +347,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0a277d94",
    "metadata": {},
@@ -376,6 +384,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "974d6065",
    "metadata": {},
