--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a7dea195",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6a80e19b",
    "metadata": {},
@@ -17,6 +19,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "28f1521a",
    "metadata": {},
@@ -37,6 +40,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "497ac0bb",
    "metadata": {},
@@ -58,6 +62,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ffcfbb5b",
    "metadata": {},
@@ -66,6 +71,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f517570f",
    "metadata": {},
@@ -85,6 +91,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c9a1777",
    "metadata": {},
@@ -103,6 +110,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "af04bd60",
    "metadata": {},
@@ -196,6 +204,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "637a7391",
    "metadata": {},
@@ -277,6 +286,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "89cd320e",
    "metadata": {},
@@ -285,6 +295,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c36767bd",
    "metadata": {},
@@ -328,6 +339,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3008b09e",
    "metadata": {},
@@ -337,170 +349,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4633f802",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<OpenAIObject text_completion id=cmpl-7Yl3SC4jCsVc2mJMNZmUEomK8BKZa at 0x11e656e10> JSON: {\n",
-      "  \"choices\": [\n",
-      "    {\n",
-      "      \"finish_reason\": \"stop\",\n",
-      "      \"index\": 0,\n",
-      "      \"logprobs\": null,\n",
-      "      \"text\": \" RIGHT\"\n",
-      "    }\n",
-      "  ],\n",
-      "  \"created\": 1688518386,\n",
-      "  \"id\": \"cmpl-7Yl3SC4jCsVc2mJMNZmUEomK8BKZa\",\n",
-      "  \"model\": \"text-davinci-003\",\n",
-      "  \"object\": \"text_completion\",\n",
-      "  \"usage\": {\n",
-      "    \"completion_tokens\": 1,\n",
-      "    \"prompt_tokens\": 82,\n",
-      "    \"total_tokens\": 83\n",
-      "  }\n",
-      "}]\n",
-      "[<OpenAIObject text_completion id=cmpl-7Yl3T3VGQLUlP50Pt3blH1tTCI0O3 at 0x11e6575f0> JSON: {\n",
-      "  \"choices\": [\n",
-      "    {\n",
-      "      \"finish_reason\": \"stop\",\n",
-      "      \"index\": 0,\n",
-      "      \"logprobs\": null,\n",
-      "      \"text\": \" RIGHT\"\n",
-      "    }\n",
-      "  ],\n",
-      "  \"created\": 1688518387,\n",
-      "  \"id\": \"cmpl-7Yl3T3VGQLUlP50Pt3blH1tTCI0O3\",\n",
-      "  \"model\": \"text-davinci-003\",\n",
-      "  \"object\": \"text_completion\",\n",
-      "  \"usage\": {\n",
-      "    \"completion_tokens\": 1,\n",
-      "    \"prompt_tokens\": 84,\n",
-      "    \"total_tokens\": 85\n",
-      "  }\n",
-      "}]\n",
-      "[<OpenAIObject text_completion id=cmpl-7Yl3UaVALivISZx7dqcpZrkXV0ug8 at 0x11e6575f0> JSON: {\n",
-      "  \"choices\": [\n",
-      "    {\n",
-      "      \"finish_reason\": \"stop\",\n",
-      "      \"index\": 0,\n",
-      "      \"logprobs\": null,\n",
-      "      \"text\": \" RIGHT\"\n",
-      "    }\n",
-      "  ],\n",
-      "  \"created\": 1688518388,\n",
-      "  \"id\": \"cmpl-7Yl3UaVALivISZx7dqcpZrkXV0ug8\",\n",
-      "  \"model\": \"text-davinci-003\",\n",
-      "  \"object\": \"text_completion\",\n",
-      "  \"usage\": {\n",
-      "    \"completion_tokens\": 1,\n",
-      "    \"prompt_tokens\": 82,\n",
-      "    \"total_tokens\": 83\n",
-      "  }\n",
-      "}]\n",
-      "[<OpenAIObject text_completion id=cmpl-7Yl3VNLQwzHxcKDeYZ0VQ3fb72LiM at 0x11e656930> JSON: {\n",
-      "  \"choices\": [\n",
-      "    {\n",
-      "      \"finish_reason\": \"stop\",\n",
-      "      \"index\": 0,\n",
-      "      \"logprobs\": null,\n",
-      "      \"text\": \" RIGHT\"\n",
-      "    }\n",
-      "  ],\n",
-      "  \"created\": 1688518389,\n",
-      "  \"id\": \"cmpl-7Yl3VNLQwzHxcKDeYZ0VQ3fb72LiM\",\n",
-      "  \"model\": \"text-davinci-003\",\n",
-      "  \"object\": \"text_completion\",\n",
-      "  \"usage\": {\n",
-      "    \"completion_tokens\": 1,\n",
-      "    \"prompt_tokens\": 84,\n",
-      "    \"total_tokens\": 85\n",
-      "  }\n",
-      "}]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>messages</th>\n",
-       "      <th>response(s)</th>\n",
-       "      <th>latency</th>\n",
-       "      <th>followed_directions</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Echo the following input: This is a test</td>\n",
-       "      <td>[\\n\\nThis is a test]</td>\n",
-       "      <td>2.608490</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Echo the following input: This is not a test</td>\n",
-       "      <td>[\\n\\nThis is not a test]</td>\n",
-       "      <td>2.105207</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Repeat the following input: This is a test</td>\n",
-       "      <td>[\\n\\nThis is a test]</td>\n",
-       "      <td>0.510293</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Repeat the following input: This is not a test</td>\n",
-       "      <td>[\\n\\nThis is not a test]</td>\n",
-       "      <td>1.843766</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         messages               response(s)   \n",
-       "0  Echo the following input: This is a test        [\\n\\nThis is a test]      \\\n",
-       "1  Echo the following input: This is not a test    [\\n\\nThis is not a test]   \n",
-       "2  Repeat the following input: This is a test      [\\n\\nThis is a test]       \n",
-       "3  Repeat the following input: This is not a test  [\\n\\nThis is not a test]   \n",
-       "\n",
-       "    latency  followed_directions  \n",
-       "0  2.608490  1.0                  \n",
-       "1  2.105207  1.0                  \n",
-       "2  0.510293  1.0                  \n",
-       "3  1.843766  1.0                  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "harness.evaluate(\"followed_directions\", auto_eval)\n",
     "harness.visualize()"
